[package]
name = "meta-traits"
version = "0.1.0"
authors = ["jdeepee <josh@junto.foundation>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
hdk3 = { git = "https://github.com/holochain/holochain", rev = "3675b58", package = "hdk3" }
holo_hash = { git = "https://github.com/holochain/holochain", rev = "3675b58", package = "holo_hash" }
chrono = { version = "*", features = ["serde"] }